--- a/nuget.config
+++ b/nuget.config
@@ -4,6 +4,7 @@
     <clear />
     <add key="github" value="https://nuget.pkg.github.com/prathimanm/index.json" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="ConsoleFxPackages" value="https://www.myget.org/F/consolefx/api/v3/index.json" />
   </packageSources>
   <packageSourceCredentials>
     <github>
